see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note3

30-Apr-2013 Jean-Marie Simonet
 # [#30488] Wrong default values for weblink icons in layout. Thanks THomas Hunziker.
 #$ [#30381] Create Folder button label - Media Manager. Thanks Glenn Arkell
 #$ [#30618] *Adding filtering by Unprotected extensions in Extensions Manager=>Manage
 # [#29922] Browser Agent Google Chrome on IOS. Thanks Brian Teeman.
 # [#30622] Queries not using JDatabase. Thanks Georges Wilson
 # [#30774] *SEF plugin issue. Thanks Robert Segura.
 #$ [#30737] Incorrect title of the User Note Categories Manager

29-Apr-2013 Jean-Marie Simonet
 $ Removing deprecated lang strings for the flash Uploader

28-Apr-2013 Jean-Marie Simonet
 $ Adding installation languages : ro-RO and gd-GB

-------------------- 3.1.1 Stable Release [26-Apr-2013] ------------------

26-Apr-2013 Mark Dexter
 # [#30702] Only titles display in featured/blogged views when hide intro text is selected.
 # [#30681] Error in Database tab in Extension Manager.
 # [#30697] Invalid tab end in article edit page. Thanks Dennis Hermatski.
 # [#30725] Exception thrown for empty path. Thanks Elin Waring.
 # [#30679] Fix two Tags-related API issues. Thanks Elin Waring.
 # [#30632] *Menu item Alias required setting. Thanks Jean-Marie Simonet.
 # [#29957] Administrator interface dropdown menus not working on tablets. Thanks Denia Si.
 # [#30660] Corrects font-file stack order. Thanks Seth Warburton.
 # [#30668] *Beez3 missing JHtml::_('behavior.caption');. Thanks Jean-Marie Simonet.
 # [#30398] com_tags show "{loadmodule..." when listing items. Thanks Elin Waring.