@@ -55,7 +55,7 @@ class JToolbarButtonStandard extends JToolbarButton
 			$iconWhite = "";
 		}
 
-		$html = "<button href=\"#\" onclick=\"$doTask\" class=\"" . $btnClass . "\">\n";
+		$html = "<button onclick=\"$doTask\" class=\"" . $btnClass . "\">\n";
 		$html .= "<i class=\"$class $iconWhite\">\n";
 		$html .= "</i>\n";
 		$html .= "$i18n_text\n";
